data/all_generated_tests/raw_wast_tests/br_table_EdgeCaseFailuresinbr_table_2519.wast
;; 8. Test Description: **Zero-Length Operand Sequence**    - **Constraint Checked:** Zero-length sequences within the operand stack context.    - **How it Relates:** Ensures the absence of values in operand stack sequences does not lead to crashes or undefined behavior.

(assert_invalid
  (module (func
    (block
      (br_table 0 0 (i32.const 0))
    )
  ))
  "type mismatch"
)